Changes on localization files

--- a/zh-CN/Lang_MagicBookNames_ZH-CN.lang
+++ b/zh-CN/Lang_MagicBookNames_ZH-CN.lang
@@ -1,63 +1,63 @@
-Amlos.Combat.MagicBooks.Prefix.None.name: ""
-Amlos.Combat.MagicBooks.Prefix.Someones.name: "某人的 "
-Amlos.Combat.MagicBooks.Prefix.Broken.name: "破损的 "
-Amlos.Combat.MagicBooks.Prefix.Worn.name: "疯狂的 "
-Amlos.Combat.MagicBooks.Prefix.Ordinary.name: "正常的 "
-Amlos.Combat.MagicBooks.Prefix.Standard.name: "标准的 "
-Amlos.Combat.MagicBooks.Prefix.Simple.name: "简单的 "
-Amlos.Combat.MagicBooks.Prefix.Regular.name: "常规的 "
-Amlos.Combat.MagicBooks.Prefix.Basic.name: "基础的 "
-Amlos.Combat.MagicBooks.Prefix.Routine.name: "常规的 "
-Amlos.Combat.MagicBooks.Prefix.Average.name: "平均的 "
-Amlos.Combat.MagicBooks.Prefix.Common.name: "普通的 "
-Amlos.Combat.MagicBooks.Prefix.Plain.name: "简洁的 "
-Amlos.Combat.MagicBooks.Prefix.Usual.name: "常用的 "
-Amlos.Combat.MagicBooks.Prefix.Familiar.name: "使魔 "
-Amlos.Combat.MagicBooks.Prefix.Lost.name: "遗失的 "
-Amlos.Combat.MagicBooks.Prefix.OneChapterof.name: "其中一章： "
-Amlos.Combat.MagicBooks.Prefix.Unusual.name: "异常的 "
-Amlos.Combat.MagicBooks.Prefix.Rarefied.name: "稀有的 "
-Amlos.Combat.MagicBooks.Prefix.Exceptional.name: "优越的 "
-Amlos.Combat.MagicBooks.Prefix.Unique.name: "独一无二的 "
-Amlos.Combat.MagicBooks.Prefix.Scarce.name: "罕见的 "
-Amlos.Combat.MagicBooks.Prefix.Peculiar.name: "怪奇的 "
-Amlos.Combat.MagicBooks.Prefix.Special.name: "特别的"
-Amlos.Combat.MagicBooks.Prefix.Extraordinary.name: "非凡的 "
-Amlos.Combat.MagicBooks.Prefix.Rare.name: "稀少的"
-Amlos.Combat.MagicBooks.Prefix.Curious.name: "无价的 "
-Amlos.Combat.MagicBooks.Prefix.Seldom.name: "少数的 "
-Amlos.Combat.MagicBooks.Prefix.Distinct.name: "独特的 "
-Amlos.Combat.MagicBooks.Prefix.Uncommon.name: "不同寻常的 "
-Amlos.Combat.MagicBooks.Prefix.Distinguished.name: "杰出的 "
-Amlos.Combat.MagicBooks.Prefix.Ancient.name: "远古的 "
-Amlos.Combat.MagicBooks.Prefix.TheApprentices.name: "学徒的 "
-Amlos.Combat.MagicBooks.Prefix.Gloomscribes.name: "格洛姆塞韦文的 "
-Amlos.Combat.MagicBooks.Prefix.LostChapterof.name: "遗落的一章： "
-Amlos.Combat.MagicBooks.Prefix.Exclusive.name: "专属的 "
-Amlos.Combat.MagicBooks.Prefix.Exquisite.name: "精美的 "
-Amlos.Combat.MagicBooks.Prefix.Precious.name: "珍贵的 "
-Amlos.Combat.MagicBooks.Prefix.Valuable.name: "有价值的 "
-Amlos.Combat.MagicBooks.Prefix.Invaluable.name: "粪土般的 "
-Amlos.Combat.MagicBooks.Prefix.Limited.name: "限购版 "
-Amlos.Combat.MagicBooks.Prefix.Elite.name: "精英的 "
-Amlos.Combat.MagicBooks.Prefix.Glorious.name: "壮丽的 "
-Amlos.Combat.MagicBooks.Prefix.Monumental.name: "不朽的 "
-Amlos.Combat.MagicBooks.Prefix.MasterCais.name: "蔡家的 "
-Amlos.Combat.MagicBooks.Prefix.GreatAcolytes.name: "伟大式僧的 "
-Amlos.Combat.MagicBooks.Prefix.Doctors.name: "博士的 "
-Amlos.Combat.MagicBooks.Prefix.Naiads.name: "奈德的 "
-Amlos.Combat.MagicBooks.Prefix.FinaleOf.name: "终末的 "
-Amlos.Combat.MagicBooks.Prefix.Legendary.name: "传奇级 "
-Amlos.Combat.MagicBooks.Prefix.Mythical.name: "神话级 "
-Amlos.Combat.MagicBooks.Prefix.Majestic.name: "雄伟的 "
-Amlos.Combat.MagicBooks.Prefix.Divine.name: "超凡入圣的 "
-Amlos.Combat.MagicBooks.Prefix.Fabled.name: "传说中的 "
-Amlos.Combat.MagicBooks.Prefix.Supreme.name: "顶级的 "
-Amlos.Combat.MagicBooks.Prefix.Transcendent.name: "超凡的 "
-Amlos.Combat.MagicBooks.Prefix.Sovereign.name: "君主的 "
-Amlos.Combat.MagicBooks.Prefix.Illustrious.name: "杰出的 "
-Amlos.Combat.MagicBooks.Prefix.Prime.name: "高端的 "
-Amlos.Combat.MagicBooks.Prefix.Aethers.name: "以太的 "
+@ -1,229 +1,227 @@
+Amlos.Combat.MagicBooks.Prefix.Common.None.name: ""
+Amlos.Combat.MagicBooks.Prefix.Common.Someones.name: "某人的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Broken.name: "破损的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Worn.name: "疯狂的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Ordinary.name: "正常的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Standard.name: "标准的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Simple.name: "简单的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Regular.name: "常规的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Basic.name: "基础的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Routine.name: "常规的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Average.name: "平均的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Common.name: "普通的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Plain.name: "简洁的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Usual.name: "常用的 "
+Amlos.Combat.MagicBooks.Prefix.Common.Familiar.name: "使魔 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Lost.name: "遗失的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.OneChapterof.name: "其中一章： "
+Amlos.Combat.MagicBooks.Prefix.Rare.Unusual.name: "异常的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Rarefied.name: "稀有的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Exceptional.name: "优越的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Unique.name: "独一无二的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Scarce.name: "罕见的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Peculiar.name: "怪奇的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Special.name: "特别的"
+Amlos.Combat.MagicBooks.Prefix.Rare.Extraordinary.name: "非凡的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Rare.name: "稀少的"
+Amlos.Combat.MagicBooks.Prefix.Rare.Curious.name: "无价的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Seldom.name: "少数的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Distinct.name: "独特的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Uncommon.name: "不同寻常的 "
+Amlos.Combat.MagicBooks.Prefix.Rare.Distinguished.name: "杰出的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Ancient.name: "远古的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.TheApprentices.name: "学徒的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Gloomscribes.name: "格洛姆塞韦文的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.LostChapterof.name: "遗落的一章： "
+Amlos.Combat.MagicBooks.Prefix.Epic.Exclusive.name: "专属的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Exquisite.name: "精美的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Precious.name: "珍贵的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Valuable.name: "有价值的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Invaluable.name: "粪土般的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Limited.name: "限购版 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Elite.name: "精英的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Glorious.name: "壮丽的 "
+Amlos.Combat.MagicBooks.Prefix.Epic.Monumental.name: "不朽的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.MasterCais.name: "蔡家的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.GreatAcolytes.name: "伟大式僧的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Doctors.name: "博士的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.FinaleOf.name: "终末的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Legendary.name: "传奇级 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Mythical.name: "神话级 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Majestic.name: "雄伟的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Divine.name: "超凡入圣的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Fabled.name: "传说中的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Supreme.name: "顶级的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Transcendent.name: "超凡的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Sovereign.name: "君主的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Illustrious.name: "杰出的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Prime.name: "高端的 "
+Amlos.Combat.MagicBooks.Prefix.Legendary.Aethers.name: "以太的 "
 Amlos.Combat.MagicBooks.Suffix.Aethiumian.AethiumianNotes.name: "辉石笔记"
 Amlos.Combat.MagicBooks.Suffix.Aethiumian.NewMagicStudy.name: "新魔法研究"
 Amlos.Combat.MagicBooks.Suffix.Aethiumian.RecordofUnknowns.name: "未知记录"
@@ -98,10 +98,10 @@ Amlos.Combat.MagicBooks.Suffix.Water.SecretsUndertheSea.name: "海底的秘密"
 Amlos.Combat.MagicBooks.Suffix.Water.AzureGrimoire.name: "蔚蓝魔典"
 Amlos.Combat.MagicBooks.Suffix.Water.AquaticSpells.name: "水生法术"
 Amlos.Combat.MagicBooks.Suffix.Water.AquaticRites.name: "水之仪式"
+Amlos.Combat.MagicBooks.Suffix.Water.AquaticTestaments.name: "水之遗嘱"
 Amlos.Combat.MagicBooks.Suffix.Water.LoreoftheOceanicKingdoms.name: "海洋王国的传说"
 Amlos.Combat.MagicBooks.Suffix.Water.LiquidLore.name: "流体知识"
-Amlos.Combat.MagicBooks.Suffix.Water.NotesaboutMaelstrom.name: "关于漩涡的注释"
-Amlos.Combat.MagicBooks.Suffix.Water.TritonTestaments.name: "海卫一的遗嘱"
+Amlos.Combat.MagicBooks.Suffix.Water.NotesaboutMaelstrom.name: "漩涡注释"
 Amlos.Combat.MagicBooks.Suffix.Water.TeachofPoseidon.name: "波塞冬的教导"
 Amlos.Combat.MagicBooks.Suffix.Water.WhisperofWater.name: "水之低语"
 Amlos.Combat.MagicBooks.Suffix.Water.CeruleanConjurings.name: "蔚蓝咒语"
@@ -226,4 +226,4 @@ Amlos.Combat.MagicBooks.Suffix.Arcane.EctoplasmicEssence.name: "灵质精华"
 Amlos.Combat.MagicBooks.Suffix.Arcane.SpectralSentience.name: "光谱感知"
 Amlos.Combat.MagicBooks.Suffix.Arcane.AstralVerses.name: "星之诗"
 Amlos.Combat.MagicBooks.Suffix.Arcane.ArcaneVerses.name: "奥术诗句"
-Amlos.Combat.MagicBooks.Suffix.Light.ArtofLuminance.name: 荧光之画
+Amlos.Combat.MagicBooks.Suffix.Light.ArtofLuminance.name: "荧光之画"
