New Crowdin updates (#5)
* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_effect.yml (Chinese Simplified)

* New translations lang_effect.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_entity.yml (Chinese Simplified)

* New translations lang_entity.yml (English, United States)

* New translations lang_entity.yml (Chinese Simplified)

* New translations lang_entity.yml (English, United States)

--- a/en-US/Lang_Entity_EN-US.lang
+++ b/en-US/Lang_Entity_EN-US.lang
@@ -1,3 +1,57 @@
+Amlos.Entity.BookWorm.desc: "BookWormdesc."
+Amlos.Entity.BookWorm.info: "BookWorminfo."
+Amlos.Entity.BookWorm.name: "BookWorm"
+Amlos.Entity.Dustevil.desc: "Dustevildesc."
+Amlos.Entity.Dustevil.info: "Dustevilinfo."
+Amlos.Entity.Dustevil.name: "Dustevil"
+Amlos.Entity.Hemisphrog.desc: "Hemisphrogdesc."
+Amlos.Entity.Hemisphrog.info: "Hemisphroginfo."
+Amlos.Entity.Hemisphrog.name: "Hemisphrog"
+Amlos.Entity.Laveel.desc: "Laveeldesc."
+Amlos.Entity.Laveel.info: "Laveelinfo."
+Amlos.Entity.Laveel.name: "Laveel"
+Amlos.Entity.Lightball.desc: "Lightballdesc."
+Amlos.Entity.Lightball.info: "Lightballinfo."
+Amlos.Entity.Lightball.name: "Lightball"
+Amlos.Entity.MamaRhombear.desc: "MamaRhombeardesc."
+Amlos.Entity.MamaRhombear.info: "MamaRhombearinfo."
 Amlos.Entity.MamaRhombear.name: "Mama Rhombear"
+Amlos.Entity.MamasRhombear.desc: "MamasRhombeardesc."
+Amlos.Entity.MamasRhombear.info: "MamasRhombearinfo."
+Amlos.Entity.MamasRhombear.name: "MamasRhombear"
+Amlos.Entity.Pulengs_Dark.desc: "Pulengs_Darkdesc."
+Amlos.Entity.Pulengs_Dark.info: "Pulengs_Darkinfo."
+Amlos.Entity.Pulengs_Dark.name: "Pulengs_Dark"
+Amlos.Entity.Pulengs_Earth.desc: "Pulengs_Earthdesc."
+Amlos.Entity.Pulengs_Earth.info: "Pulengs_Earthinfo."
+Amlos.Entity.Pulengs_Earth.name: "Pulengs_Earth"
+Amlos.Entity.Pulengs_Fire.desc: "Pulengs_Firedesc."
+Amlos.Entity.Pulengs_Fire.info: "Pulengs_Fireinfo."
+Amlos.Entity.Pulengs_Fire.name: "Pulengs_Fire"
+Amlos.Entity.Pulengs_Physical.desc: "Pulengs_Physicaldesc."
+Amlos.Entity.Pulengs_Physical.info: "Pulengs_Physicalinfo."
+Amlos.Entity.Pulengs_Physical.name: "Pulengs_Physical"
+Amlos.Entity.Pulengs_Water.desc: "Pulengs_Waterdesc."
+Amlos.Entity.Pulengs_Water.info: "Pulengs_Waterinfo."
+Amlos.Entity.Pulengs_Water.name: "Pulengs_Water"
+Amlos.Entity.Pulengs_Wind.desc: "Pulengs_Winddesc."
+Amlos.Entity.Pulengs_Wind.info: "Pulengs_Windinfo."
+Amlos.Entity.Pulengs_Wind.name: "Pulengs_Wind"
+Amlos.Entity.Rhombear.desc: "Rhombeardesc."
+Amlos.Entity.Rhombear.info: "Rhombearinfo."
+Amlos.Entity.Rhombear.name: "Rhombear"
+Amlos.Entity.Sahamusi_SpearSoldier.desc: "Sahamusi_SpearSoldierdesc."
+Amlos.Entity.Sahamusi_SpearSoldier.info: "Sahamusi_SpearSoldierinfo."
+Amlos.Entity.Sahamusi_SpearSoldier.name: "Sahamusi_SpearSoldier"
+Amlos.Entity.TheAmir.desc: "TheAmirdesc."
+Amlos.Entity.TheAmir.info: "TheAmirinfo."
 Amlos.Entity.TheAmir.name: "The Amir"
+Amlos.Entity.TheAmir_MajorClaw.desc: "TheAmir_MajorClawdesc."
+Amlos.Entity.TheAmir_MajorClaw.info: "TheAmir_MajorClawinfo."
+Amlos.Entity.TheAmir_MajorClaw.name: "TheAmir_MajorClaw"
+Amlos.Entity.TheAmir_PatternClaw.desc: "TheAmir_PatternClawdesc."
+Amlos.Entity.TheAmir_PatternClaw.info: "TheAmir_PatternClawinfo."
+Amlos.Entity.TheAmir_PatternClaw.name: "TheAmir_PatternClaw"
+Amlos.Entity.TheGuardian.desc: "TheGuardiandesc."
+Amlos.Entity.TheGuardian.info: "TheGuardianinfo."
 Amlos.Entity.TheGuardian.name: "The Guardian"
