New Crowdin updates (#6)
* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_ui.yml (Chinese Simplified)

* New translations lang_ui.yml (English, United States)

* New translations lang_ui.yml (Chinese Simplified)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_common.yml (Chinese Simplified)

* New translations lang_common.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_ui.yml (Chinese Simplified)

* New translations lang_ui.yml (English, United States)

* New translations lang_ui.yml (Chinese Simplified)

* New translations lang_ui.yml (English, United States)

--- a/en-US/Lang_Combat_EN-US.lang
+++ b/en-US/Lang_Combat_EN-US.lang
@@ -92,7 +92,7 @@ Amlos.Combat.ActiveSkill.RazorTempest.desc: "Unleash Large Razors that homes on 
 Amlos.Combat.ActiveSkill.RazorTempest.name: "Razor Tempest"
 Amlos.Combat.ActiveSkill.ReleaseThePlague.desc: "ReleaseThePlagueDesc."
 Amlos.Combat.ActiveSkill.ReleaseThePlague.name: "ReleaseThePlague"
-Amlos.Combat.ActiveSkill.ShadowDomain.desc: "Creates a zone centered around the player that grows over {maximumChargeTime} seconds. If the player moves too quickly, or enough time has passed, the zone explodes and deals {ShadowDomainExplosion} to all enemies in the area."
+Amlos.Combat.ActiveSkill.ShadowDomain.desc: "Creates a zone centered around the player that grows over {maximumChargeTime} seconds. If the player moves too quickly, or passed {activation}, the zone explodes and deals {ShadowDomainExplosion} to all enemies in the area."
 Amlos.Combat.ActiveSkill.ShadowDomain.name: "Shadow Domain"
 Amlos.Combat.ActiveSkill.ShimmeringBlessing.desc: "Grants the Shimmer Blessing effect, gives the user max {MaxShield} * ({level}+1) shield based on outgoing damage."
 Amlos.Combat.ActiveSkill.ShimmeringBlessing.name: "Shimmering Blessing"
@@ -110,7 +110,7 @@ Amlos.Combat.ActiveSkill.SpaceDistortion.desc: "Create a zone for {lifetime}s th
 Amlos.Combat.ActiveSkill.SpaceDistortion.name: "Space Distortion"
 Amlos.Combat.ActiveSkill.SpatialCollapse.desc: "SpatialCollapseDesc."
 Amlos.Combat.ActiveSkill.SpatialCollapse.name: "SpatialCollapse"
-Amlos.Combat.ActiveSkill.SpiritLink.desc: "Drops a chain that will attach to a nearby enemy for 10s, attacking the Spirit Link deals reduced soul damage to the target.\n"
+Amlos.Combat.ActiveSkill.SpiritLink.desc: "Drops a chain that will attach to a nearby enemy for 10s, attacking the Spirit Link deals {damageMultiplier:f_p1} original damage of soul damage to the target."
 Amlos.Combat.ActiveSkill.SpiritLink.name: "Spirit Link"
 Amlos.Combat.ActiveSkill.SpiritWarrior.desc: "SpiritWarriorDesc."
 Amlos.Combat.ActiveSkill.SpiritWarrior.name: "SpiritWarrior"
@@ -128,13 +128,13 @@ Amlos.Combat.ActiveSkill.WaterGun.desc: "WaterGunDesc."
 Amlos.Combat.ActiveSkill.WaterGun.name: "WaterGun"
 Amlos.Combat.ActiveSkill.WaterWall.desc: "WaterWallDesc."
 Amlos.Combat.ActiveSkill.WaterWall.name: "WaterWall"
-Amlos.Combat.ActiveSkill.WindBarrage.desc: "Replaces Claw attack with rapid wind barrages. dealing  {prefab} Physical Wind damage. Blocks bullets."
+Amlos.Combat.ActiveSkill.WindBarrage.desc: "Replaces Claw attack with rapid wind barrages, dealing {prefab} damage and blocks bullets."
 Amlos.Combat.ActiveSkill.WindBarrage.name: "Wind Barrage"
 Amlos.Combat.ActiveSkill.WindBlade.desc: "Replaces Claw attack with horizontal wind blades. Large Blade does {windBladeLarge},\n 5x Small Blades does {windBladeSmall} each."
 Amlos.Combat.ActiveSkill.WindBlade.name: "Wind Blade"
-Amlos.Combat.ActiveSkill.WindCutter.desc: "Shoot a spread of wind cutters.The wind cutters are very fast, home strongly, and have no pierce.They have short lifespans.\nEach cutter does {prefab}."
+Amlos.Combat.ActiveSkill.WindCutter.desc: "Shoot a spread of fast-homing wind cutters. Wind Cutters have no pierce and does {prefab}."
 Amlos.Combat.ActiveSkill.WindCutter.name: "Wind Cutter"
-Amlos.Combat.ActiveSkill.WindRide.desc: "Shoot wind vertically down to move up quickly, deal {prefab} to enemies below.\nUsing this skill gives an additional speed boost for a period of time."
+Amlos.Combat.ActiveSkill.WindRide.desc: "Move up quickly and shoot {windParticles} wind vertically down, deal {prefab} to enemies below.\nUsing this skill gives an additional speed boost for a period of time."
 Amlos.Combat.ActiveSkill.WindRide.name: "Wind Ride"
 Amlos.Combat.ActiveSkill.WindStorm.desc: "Continuously fire wind slicers horizontally, dealing {windStorm_Small} for small blades \nand has a chance to fire a large blade for {windStorm_Large}."
 Amlos.Combat.ActiveSkill.WindStorm.name: "Wind Storm"
@@ -170,6 +170,8 @@ Amlos.Combat.Effect.LavaBurning.desc: "LavaBurningDesc."
 Amlos.Combat.Effect.LavaBurning.name: "Lava Burning"
 Amlos.Combat.Effect.LightBarrierStatus.desc: "LightBarrierStatusDesc."
 Amlos.Combat.Effect.LightBarrierStatus.name: "LightBarrierStatus"
+Amlos.Combat.Effect.MagicalVulnerable.desc: "MagicalVulnerableDesc."
+Amlos.Combat.Effect.MagicalVulnerable.name: "MagicalVulnerable"
 Amlos.Combat.Effect.PhysicalVulnerable.desc: "PhysicalVulnerableDesc."
 Amlos.Combat.Effect.PhysicalVulnerable.name: "Physical Vulnerable"
 Amlos.Combat.Effect.Poison.desc: "PoisonDesc."
