--- a/en-US/Lang_UI_EN-US.lang
+++ b/en-US/Lang_UI_EN-US.lang
@@ -1,6 +1,11 @@
 Amlos.UI.Common.Back.name: "Back"
 Amlos.UI.Common.Confirm.name: "Confirm"
+Amlos.UI.Common.Off.name: "Off"
+Amlos.UI.Common.On.name: "On"
 Amlos.UI.PausePanel.Resume.name: "Resume"
+Amlos.UI.PausePanel.Restart.name: "Restart"
+Amlos.UI.PausePanel.Quit.name: "Quit"
+Amlos.UI.PausePanel.Settings.name: "Settings"
 Amlos.UI.PausePanel.title: "Pause"
 Amlos.UI.Setting.Control.title: "Control"
 Amlos.UI.Setting.Graphics.title: "Graphic"
