--- a/zh-CN/Lang_UI_ZH-CN.lang
+++ b/zh-CN/Lang_UI_ZH-CN.lang
@@ -1,6 +1,11 @@
 Amlos.UI.Common.Back.name: "返回"
 Amlos.UI.Common.Confirm.name: "确定"
+Amlos.UI.Common.Off.name: "关"
+Amlos.UI.Common.On.name: "开"
 Amlos.UI.PausePanel.Resume.name: "返回"
+Amlos.UI.PausePanel.Restart.name: "重新开始"
+Amlos.UI.PausePanel.Quit.name: "退出"
+Amlos.UI.PausePanel.Settings.name: "设置"
 Amlos.UI.PausePanel.title: "暂停"
 Amlos.UI.Setting.Control.title: "控制"
 Amlos.UI.Setting.Graphics.title: "图像"
