New Crowdin updates (#7)
* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_entity.yml (Chinese Simplified)

--- a/en-US/Lang_Combat_EN-US.lang
+++ b/en-US/Lang_Combat_EN-US.lang
@@ -116,7 +116,7 @@ Amlos.Combat.ActiveSkill.SpiritWarrior.desc: "SpiritWarriorDesc."
 Amlos.Combat.ActiveSkill.SpiritWarrior.name: "SpiritWarrior"
 Amlos.Combat.ActiveSkill.SuperNova.desc: "Unleash a massive supernova centering around you, dealing a burst of initial Fire damage and continous Fire damage in the area."
 Amlos.Combat.ActiveSkill.SuperNova.name: "Super Nova"
-Amlos.Combat.ActiveSkill.Superposition.desc: "Leaves behind afterimages, blocks 1+{level} hit(s)"
+Amlos.Combat.ActiveSkill.Superposition.desc: "Leaves behind afterimages, blocks {level} hit(s)"
 Amlos.Combat.ActiveSkill.Superposition.name: "Super Position"
 Amlos.Combat.ActiveSkill.Tornado.desc: "Generates a tornado at a certain location, gathering small enemies and dealing {prefab}. "
 Amlos.Combat.ActiveSkill.Tornado.name: "Tornado"
@@ -142,7 +142,7 @@ Amlos.Combat.ActiveSkill.WindWall.desc: "Generate a wind wall moving horizontall
 Amlos.Combat.ActiveSkill.WindWall.name: "Wind Wall"
 Amlos.Combat.ActiveSkill.ZeroRay.desc: "ZeroRayDesc."
 Amlos.Combat.ActiveSkill.ZeroRay.name: "ZeroRay"
-Amlos.Combat.Effect.Burning.desc: "BurningDesc."
+Amlos.Combat.Effect.Burning.desc: "Causes the entity to catch fire and take {EffectDamage}$Amlos.Element.Fire.name$ damage every {Interval} seconds. When level is higher than {BONUS_LEVEL}, the entity takes an additional {ExtraDamage}$Amlos.Element.Fire.name$ damage each time it is wounded."
 Amlos.Combat.Effect.Burning.name: "Burning"
 Amlos.Combat.Effect.Charge.desc: "ChargeDesc."
 Amlos.Combat.Effect.Charge.name: "Charge"
@@ -158,22 +158,14 @@ Amlos.Combat.Effect.Dusted.desc: "DustedDesc."
 Amlos.Combat.Effect.Dusted.name: "Dusted"
 Amlos.Combat.Effect.Eclipse.desc: "EclipseDesc."
 Amlos.Combat.Effect.Eclipse.name: "Eclipse"
-Amlos.Combat.Effect.Endure.desc: "EndureDesc."
-Amlos.Combat.Effect.Endure.name: "Endure"
 Amlos.Combat.Effect.Evaporate.desc: "EvaporateDesc."
 Amlos.Combat.Effect.Evaporate.name: "Evaporate"
-Amlos.Combat.Effect.Frozen.desc: "FrozenDesc."
+Amlos.Combat.Effect.Frozen.desc: "Makes the entity unable to move, sprint, or jump. Invalid for Boss."
 Amlos.Combat.Effect.Frozen.name: "Frozen"
 Amlos.Combat.Effect.Immobilize.desc: "ImmobilizeDesc."
 Amlos.Combat.Effect.Immobilize.name: "Immobilize"
 Amlos.Combat.Effect.LavaBurning.desc: "LavaBurningDesc."
 Amlos.Combat.Effect.LavaBurning.name: "Lava Burning"
-Amlos.Combat.Effect.LightBarrierStatus.desc: "LightBarrierStatusDesc."
-Amlos.Combat.Effect.LightBarrierStatus.name: "LightBarrierStatus"
-Amlos.Combat.Effect.MagicalVulnerable.desc: "MagicalVulnerableDesc."
-Amlos.Combat.Effect.MagicalVulnerable.name: "MagicalVulnerable"
-Amlos.Combat.Effect.PhysicalVulnerable.desc: "PhysicalVulnerableDesc."
-Amlos.Combat.Effect.PhysicalVulnerable.name: "Physical Vulnerable"
 Amlos.Combat.Effect.Poison.desc: "PoisonDesc."
 Amlos.Combat.Effect.Poison.name: "Poison"
 Amlos.Combat.Effect.Power.desc: "PowerDesc."
