--- a/zh-CN/Lang_Combat_ZH-CN.lang
+++ b/zh-CN/Lang_Combat_ZH-CN.lang
@@ -94,7 +94,7 @@ Amlos.Combat.ActiveSkill.ReleaseThePlague.desc: "ReleaseThePlagueDesc."
 Amlos.Combat.ActiveSkill.ReleaseThePlague.name: "ReleaseThePlague"
 Amlos.Combat.ActiveSkill.ShadowDomain.desc: "创建一个以玩家为中心的区域，该区域会在 {maximumChargeTime} 内增长。 如果玩家移动太快，或者已经过去了足够的时间，该区域就会爆炸并对区域内的所有敌人造成 {ShadowDomainExplosion}。"
 Amlos.Combat.ActiveSkill.ShadowDomain.name: "影域"
-Amlos.Combat.ActiveSkill.ShimmeringBlessing.desc: "授予繁星赐福的效果，根据输出伤害为用户提供最大 {MaxShield} * ({level}+1) 的护盾。"
+Amlos.Combat.ActiveSkill.ShimmeringBlessing.desc: "授予繁星赐福的效果，根据输出伤害提供最大 {MaxShield} * ({level}+1)  的减伤护甲。"
 Amlos.Combat.ActiveSkill.ShimmeringBlessing.name: "繁星赐福"
 Amlos.Combat.ActiveSkill.SnowStorm.desc: "基于玩家朝向，向左侧或右侧刮出水平移动的暴风雪。\n暴风雪会裹挟其中的敌人前进，并对他们每{snowStormPrefab.DealDamageTime}秒造成{snowStormPrefab}。"
 Amlos.Combat.ActiveSkill.SnowStorm.name: "风雪暴"
@@ -116,7 +116,7 @@ Amlos.Combat.ActiveSkill.SpiritWarrior.desc: "SpiritWarriorDesc."
 Amlos.Combat.ActiveSkill.SpiritWarrior.name: "SpiritWarrior"
 Amlos.Combat.ActiveSkill.SuperNova.desc: "释放以玩家为中心的巨大超新星，在该区域造成一开始的爆炸伤害和持续的火焰伤害。"
 Amlos.Combat.ActiveSkill.SuperNova.name: "超新星之怒"
-Amlos.Combat.ActiveSkill.Superposition.desc: "留下残影，格挡 1+{level} 次攻击。"
+Amlos.Combat.ActiveSkill.Superposition.desc: "留下残影，格挡 {level} 次攻击。"
 Amlos.Combat.ActiveSkill.Superposition.name: "超能替身"
 Amlos.Combat.ActiveSkill.Tornado.desc: "在特定位置产生碎空旋风斩，聚集小型敌人并造成{prefab}。"
 Amlos.Combat.ActiveSkill.Tornado.name: "碎空旋风斩"
@@ -142,69 +142,61 @@ Amlos.Combat.ActiveSkill.WindWall.desc: "生成水平移动的风墙，击退敌
 Amlos.Combat.ActiveSkill.WindWall.name: "流风壁"
 Amlos.Combat.ActiveSkill.ZeroRay.desc: "ZeroRayDesc."
 Amlos.Combat.ActiveSkill.ZeroRay.name: "ZeroRay"
-Amlos.Combat.Effect.Burning.desc: "BurningDesc."
+Amlos.Combat.Effect.Burning.desc: "使得实体着火，每{Interval}秒受到{EffectDamage}$Amlos.Element.Fire.name$伤害。当等级高于{BONUS_LEVEL}时，实体每次受伤时受到额外{ExtraDamage}$Amlos.Element.Fire.name$伤害"
 Amlos.Combat.Effect.Burning.name: "灼烧"
-Amlos.Combat.Effect.Charge.desc: "ChargeDesc."
+Amlos.Combat.Effect.Charge.desc: "使实体提升少量伤害，降低受到伤害。\n可能还有其他用武之地。"
 Amlos.Combat.Effect.Charge.name: "充能"
-Amlos.Combat.Effect.CountShield.desc: "CountShieldDesc."
+Amlos.Combat.Effect.CountShield.desc: "完全免疫{Level}次伤害。"
 Amlos.Combat.Effect.CountShield.name: "法力盾"
-Amlos.Combat.Effect.Crack.desc: "CrackDesc."
+Amlos.Combat.Effect.Crack.desc: "使得实体受到的物理伤害提升{Level}*{INCREMENT:f_p0}。"
 Amlos.Combat.Effect.Crack.name: "龟裂"
-Amlos.Combat.Effect.DarkIrradiated.desc: "DarkIrradiatedDesc."
-Amlos.Combat.Effect.DarkIrradiated.name: "DarkIrradiated"
-Amlos.Combat.Effect.Diffusion.desc: "DiffusionDesc."
+Amlos.Combat.Effect.DarkIrradiated.desc: "使实体每{Interval:f_f2}秒受到{baseDamage}$Amlos.Element.Dark.name$伤害。\n实体受到的伤害会随着时间增加，每次结算伤害增加{Level}×{BASE_DAMAGE}的伤害。"
+Amlos.Combat.Effect.DarkIrradiated.name: "暗辐"
+Amlos.Combat.Effect.Diffusion.desc: "当实体拥有超过1级的$Amlos.Combat.Effect.Burning.name$效果后，半径{Radius}格的实体将被赋予{AddingLevel}级的$Amlos.Combat.Effect.Burning.name$，持续50%当前$Amlos.Combat.Effect.Burning.name$效果的时间。"
 Amlos.Combat.Effect.Diffusion.name: "扩散"
-Amlos.Combat.Effect.Dusted.desc: "DustedDesc."
+Amlos.Combat.Effect.Dusted.desc: "当实体受到非基础元素（$Amlos.Element.Fire.name$, $Amlos.Element.Water.name$, $Amlos.Element.Earth.name$, $Amlos.Element.Wind.name$）伤害时，\n对实体追加原伤害{Level}×{DUST_DAMAGE:f_p0}的$Amlos.Combat.Damage.PhysicalDamage.info:physicalDamage=$$Amlos.Element.Earth.name$伤害"
 Amlos.Combat.Effect.Dusted.name: "尘缚"
-Amlos.Combat.Effect.Eclipse.desc: "EclipseDesc."
+Amlos.Combat.Effect.Eclipse.desc: "使实体受到的伤害增加{Level}×{INCREMENT:f_P1}。若实体为$Amlos.Element.Light.name$生物，额外增加{Level}×{INCREMENT:f_P1}。"
 Amlos.Combat.Effect.Eclipse.name: "暗蚀"
-Amlos.Combat.Effect.Endure.desc: "EndureDesc."
-Amlos.Combat.Effect.Endure.name: "免疫"
-Amlos.Combat.Effect.Evaporate.desc: "EvaporateDesc."
+Amlos.Combat.Effect.Evaporate.desc: "使得实体受到的魔法伤害提升{Level}*{INCREMENT:f_p0}。"
 Amlos.Combat.Effect.Evaporate.name: "蒸发"
-Amlos.Combat.Effect.Frozen.desc: "FrozenDesc."
+Amlos.Combat.Effect.Frozen.desc: "使实体无法移动，冲刺，跳跃。对Boss无效。"
 Amlos.Combat.Effect.Frozen.name: "冰冻"
-Amlos.Combat.Effect.Immobilize.desc: "ImmobilizeDesc."
+Amlos.Combat.Effect.Immobilize.desc: "使实体完全无法移动，静止在固定位置。对Boss无效。"
 Amlos.Combat.Effect.Immobilize.name: "定身"
-Amlos.Combat.Effect.LavaBurning.desc: "LavaBurningDesc."
+Amlos.Combat.Effect.LavaBurning.desc: "使得实体着火，每0.5秒受到{Level}*{baseDamage}$Amlos.Element.Fire.name$伤害。\n对于$Amlos.Element.Fire.name$生物，每次受到的伤害降低{fireCreatureDamageReduce:f_p0}。\n对于龙族则会缓慢恢复自身生命。"
 Amlos.Combat.Effect.LavaBurning.name: "烈焰燃烧"
-Amlos.Combat.Effect.LightBarrierStatus.desc: "LightBarrierStatusDesc."
-Amlos.Combat.Effect.LightBarrierStatus.name: "LightBarrierStatus"
-Amlos.Combat.Effect.MagicalVulnerable.desc: "MagicalVulnerableDesc."
-Amlos.Combat.Effect.MagicalVulnerable.name: "MagicalVulnerable"
-Amlos.Combat.Effect.PhysicalVulnerable.desc: "PhysicalVulnerableDesc."
-Amlos.Combat.Effect.PhysicalVulnerable.name: "物理弱性"
-Amlos.Combat.Effect.Poison.desc: "PoisonDesc."
+Amlos.Combat.Effect.Poison.desc: "使得实体中毒，每{Interval}秒受到{Level}*{BASE_DAMAGE}$Amlos.Element.Water.name$伤害。剧毒生物免疫。"
 Amlos.Combat.Effect.Poison.name: "中毒"
-Amlos.Combat.Effect.Power.desc: "PowerDesc."
+Amlos.Combat.Effect.Power.desc: "使实体造成的伤害提升{Level}×{INCREMENT:f_P1}。"
 Amlos.Combat.Effect.Power.name: "力量"
-Amlos.Combat.Effect.Resistance.desc: "ResistanceDesc."
+Amlos.Combat.Effect.Resistance.desc: "使实体受到的伤害降低{level}×{DECREAMENT:f_P1}。"
 Amlos.Combat.Effect.Resistance.name: "抗性"
-Amlos.Combat.Effect.Salvation.desc: "SalvationDesc."
+Amlos.Combat.Effect.Salvation.desc: "免疫所有负面效果"
 Amlos.Combat.Effect.Salvation.name: "救赎"
-Amlos.Combat.Effect.ShimmeringBlessingStatus.desc: "ShimmeringBlessingStatusDesc."
-Amlos.Combat.Effect.ShimmeringBlessingStatus.name: "ShimmeringBlessingStatus"
-Amlos.Combat.Effect.Slowness.desc: "SlownessDesc."
+Amlos.Combat.Effect.ShimmeringBlessingStatus.desc: "根据输出伤害提供最大 {MAX_SHIELD} * ({Level}+1) 的减伤护甲。"
+Amlos.Combat.Effect.ShimmeringBlessingStatus.name: "繁星赐福"
+Amlos.Combat.Effect.Slowness.desc: "使实体移动速度降低{Level}\n×{DECREMENT:f_p1}，最低降低到基础速度的10%"
 Amlos.Combat.Effect.Slowness.name: "迟缓"
-Amlos.Combat.Effect.SomeForNoneBurn.desc: "SomeForNoneBurnDesc."
-Amlos.Combat.Effect.SomeForNoneBurn.name: "SomeForNoneBurn"
-Amlos.Combat.Effect.SoulTrace.desc: "SoulTraceDesc."
+Amlos.Combat.Effect.SomeForNoneBurn.desc: "当血量高于{HEALTH_LOWER_BOUND:f_p0}时，每秒失去{DAMAGE_PERCENTAGE:f_p0}当前生命值，自身伤害提高{Level}*{DAMAGE_MODIFIER:f_p0}并获得{SPEED_MODIFIER:f_p0}加速"
+Amlos.Combat.Effect.SomeForNoneBurn.name: "炎魔灼烧"
+Amlos.Combat.Effect.SoulTrace.desc: "暴露实体的灵魂血条。\n每条灵魂血条的总量为实体血量的10%。\n每次受到非$Amlos.Element.Soul.name$伤害时同时扣除等量的该血条。如果该血条耗尽，额外对实体造成相当于实体血量10%的$Amlos.Element.Soul.name$伤害。"
 Amlos.Combat.Effect.SoulTrace.name: "唤魂"
-Amlos.Combat.Effect.Sunflare.desc: "SunflareDesc."
+Amlos.Combat.Effect.Sunflare.desc: "使实体造成的伤害提升{Level}×{INCREMENT:f_P1}。"
 Amlos.Combat.Effect.Sunflare.name: "光耀"
-Amlos.Combat.Effect.Sunken.desc: "SunkenDesc."
+Amlos.Combat.Effect.Sunken.desc: "使实体每秒钟受到{Level}点$Amlos.Element.Water.name$伤害，效果每秒钟会衰减1级。"
 Amlos.Combat.Effect.Sunken.name: "沉渊"
-Amlos.Combat.Effect.Superposition.desc: "SuperpositionDesc."
-Amlos.Combat.Effect.Superposition.name: "Superposition"
-Amlos.Combat.Effect.Swamp.desc: "SwampDesc."
-Amlos.Combat.Effect.Swamp.name: "Swamp"
-Amlos.Combat.Effect.Swiftness.desc: "SwiftnessDesc."
+Amlos.Combat.Effect.Superposition.desc: "格挡{Level}次攻击。"
+Amlos.Combat.Effect.Superposition.name: "超能替身"
+Amlos.Combat.Effect.Swamp.desc: "使得周围{Radius}格范围内的敌方受到{slownessLevel}级$Amlos.Combat.Effect.Slowness.name$。"
+Amlos.Combat.Effect.Swamp.name: "沼泽"
+Amlos.Combat.Effect.Swiftness.desc: "使实体移动速度提升{Level}\n×{INCREMENT:f_p1}，最高提升到基础速度的200%。"
 Amlos.Combat.Effect.Swiftness.name: "敏捷"
-Amlos.Combat.Effect.Voidness.desc: "VoidnessDesc."
+Amlos.Combat.Effect.Voidness.desc: "实体受到伤害后，有{Level}×{CHANCE_PER_LEVEL:f_p1}的概率将实体传送到离施加者{TELEPORT_DISTANCE}格的距离外。\n如果目标是Boss或者玩家，则造成最高血量{IMMEDIATE_DEATH_REPLACE_PERCENTAGE:f_p1}的伤害。"
 Amlos.Combat.Effect.Voidness.name: "空虚"
-Amlos.Combat.Effect.Vulnerable.desc: "VulnerableDesc."
+Amlos.Combat.Effect.Vulnerable.desc: "使实体受到的伤害增加{level}×{INCREMENT:f_P1}。"
 Amlos.Combat.Effect.Vulnerable.name: "脆弱"
-Amlos.Combat.Effect.Weakness.desc: "WeaknessDesc."
+Amlos.Combat.Effect.Weakness.desc: "使实体造成的伤害降低{level}×{DECREMENT:f_P1}。"
 Amlos.Combat.Effect.Weakness.name: "虚弱"
 Amlos.Combat.PassiveSkill.BurningBlood.desc: "BurningBloodDesc."
 Amlos.Combat.PassiveSkill.BurningBlood.name: "BurningBlood"
