New Crowdin updates (#8)
* New translations lang_ui.yml (Chinese Simplified)

* New translations lang_ui.yml (English, United States)

* New translations lang_magicbooknames.yml (Chinese Simplified)

* New translations lang_ui.yml (Chinese Simplified)

* New translations lang_ui.yml (English, United States)

--- a/en-US/Lang_UI_EN-US.lang
+++ b/en-US/Lang_UI_EN-US.lang
@@ -13,3 +13,7 @@ Amlos.UI.Setting.Language.title: "Language"
 Amlos.UI.Setting.Name: "Setting"
 Amlos.UI.Setting.Other.title: "Other"
 Amlos.UI.Setting.Sound.title: "Sound"
+Amlos.UI.Setting.Sound.Global.name: "Global"
+Amlos.UI.Setting.Sound.Effect.name: "Effect"
+Amlos.UI.Setting.Sound.Background.name: "Background"
+Amlos.UI.Setting.Sound.Ambient.name: "Ambient"
