--- a/en-US/Lang_Combat_EN-US.lang
+++ b/en-US/Lang_Combat_EN-US.lang
@@ -16,14 +16,14 @@ Amlos.Combat.ActiveSkill.Bubbles.desc: "Shoots a spread of bubbles that deal {at
 Amlos.Combat.ActiveSkill.Bubbles.name: "Bubbles"
 Amlos.Combat.ActiveSkill.BurningBlade.desc: "Replaces Claw attack with Burning Blade for {activation}s, dealing {attack}."
 Amlos.Combat.ActiveSkill.BurningBlade.name: "Burning Blade"
-Amlos.Combat.ActiveSkill.ChargeTest.desc: "ChargeTestDesc."
-Amlos.Combat.ActiveSkill.ChargeTest.name: "ChargeTest"
+Amlos.Combat.ActiveSkill.ChargeTest.desc: "A debug skill used to test charge skills. Always gives a level of charge, and has an extremely low recharge time."
+Amlos.Combat.ActiveSkill.ChargeTest.name: "Charge Test"
 Amlos.Combat.ActiveSkill.CrushingClaw.desc: "Apply the Crushing Claw effect, increasing physical damage dealt by a flat amount for {duration}s."
 Amlos.Combat.ActiveSkill.CrushingClaw.name: "Crushing Claw"
 Amlos.Combat.ActiveSkill.DarkBeam.desc: "Shoot rays of dark beams from the player to the cursor.\nBeams deal {prefab} quickly and have long range but are a bit inaccurate."
 Amlos.Combat.ActiveSkill.DarkBeam.name: "Dark Beam"
-Amlos.Combat.ActiveSkill.DarkChain.desc: "DarkChainDesc."
-Amlos.Combat.ActiveSkill.DarkChain.name: "DarkChain"
+Amlos.Combat.ActiveSkill.DarkChain.desc: "Launches a Dark Chain in the direction of the mouse, dealing {prefab} and trapping enemies inside."
+Amlos.Combat.ActiveSkill.DarkChain.name: "Dark Chain"
 Amlos.Combat.ActiveSkill.DarkFlare.desc: "Summons a ball of pure dark energy that moves towards the cursor, exploding on hit, reactivation, or after a certain distance traveled for {bigExplodePrefab}.\nDirect hits deal an additional {smallExplodePrefab}. \n"
 Amlos.Combat.ActiveSkill.DarkFlare.name: "Dark Flare"
 Amlos.Combat.ActiveSkill.DarkRadiation.desc: "Generates a dark area that moves slowly and applies the Dark Irradiated effect: deals {effectBaseDamage}+(Level*{effectBaseDamage}){prefab} to enemies within."
@@ -31,7 +31,7 @@ Amlos.Combat.ActiveSkill.DarkRadiation.name: "Dark Radiation"
 Amlos.Combat.ActiveSkill.DustCloud.desc: "Summons a cloud of dust. Enemies inside simultaneously receive {prefab} and the Dusted effect for {effectDuration}s, which deals additional {effectBaseDamage}% Earth Damage via basic element attacks. "
 Amlos.Combat.ActiveSkill.DustCloud.name: "Dust Cloud"
 Amlos.Combat.ActiveSkill.DustStorm.desc: "DustStormDesc."
-Amlos.Combat.ActiveSkill.DustStorm.name: "DustStorm"
+Amlos.Combat.ActiveSkill.DustStorm.name: "Dust Storm"
 Amlos.Combat.ActiveSkill.Earthball.desc: "Summon an orbiting Earthen sphere that does {prefab} damage when contacting enemies."
 Amlos.Combat.ActiveSkill.Earthball.name: "Earth Ball"
 Amlos.Combat.ActiveSkill.EarthenClaymore.desc: "Replaces Claw attack with swings of the mighty Earthen Claymore, \ndealing {attack} sweeping across a large area."
@@ -39,7 +39,7 @@ Amlos.Combat.ActiveSkill.EarthenClaymore.name: "Earthen Claymore"
 Amlos.Combat.ActiveSkill.EarthSpike.desc: "Summon a wave of advancing spikes, dealing {prefab} damage and knocking up enemies \nand can additionally deal damage to enemies landing on the spikes. "
 Amlos.Combat.ActiveSkill.EarthSpike.name: "Earth Spike"
 Amlos.Combat.ActiveSkill.EraserBall.desc: "EraserBallDesc."
-Amlos.Combat.ActiveSkill.EraserBall.name: "EraserBall"
+Amlos.Combat.ActiveSkill.EraserBall.name: "Eraser Ball"
 Amlos.Combat.ActiveSkill.Eruption.desc: "Summon 5 fire ball, deal {projectile}, creating a explosion of radius {explosion.Radius}m deal {explosion} to enemies"
 Amlos.Combat.ActiveSkill.Eruption.name: "Eruption"
 Amlos.Combat.ActiveSkill.Fireball.desc: "Spout a tracking fireball that deal with {fireball}, creating a explosion with {explosion} and radius {explosion.Radius}."
@@ -51,7 +51,7 @@ Amlos.Combat.ActiveSkill.FirePillars.name: "Fire Pillars"
 Amlos.Combat.ActiveSkill.FlameMine.desc: "Creates a mine at current location, exploding for {explosionPrefab} on contact or after {autoExplodeTime}s in a radius 10. "
 Amlos.Combat.ActiveSkill.FlameMine.name: "Flame Mine"
 Amlos.Combat.ActiveSkill.FlareDetonator.desc: "FlareDetonatorDesc."
-Amlos.Combat.ActiveSkill.FlareDetonator.name: "FlareDetonator"
+Amlos.Combat.ActiveSkill.FlareDetonator.name: "Flare Detonator"
 Amlos.Combat.ActiveSkill.FlowerPower.desc: "Fires a volley of flowers in a set direction, dealing {prefab} damage per flower."
 Amlos.Combat.ActiveSkill.FlowerPower.name: "Flower Power"
 Amlos.Combat.ActiveSkill.FlowofWater.desc: "Replaces Claw attack with a 3 hit-combo water attack."
@@ -66,24 +66,24 @@ Amlos.Combat.ActiveSkill.HolyLight.desc: "Create a wide ray of light that deals 
 Amlos.Combat.ActiveSkill.HolyLight.name: "Holy Light"
 Amlos.Combat.ActiveSkill.IcicleBoulder.desc: "Shoot a heavy ice boulder in a projectile, landing at the ground under mouse position.\nThe ice boulder explodes when hitting the ground or the first enemy on its route and deals {projectile} to the enemy\nThe explosion affects a circle of radius {explosion.Radius}m and {explosion}."
 Amlos.Combat.ActiveSkill.IcicleBoulder.name: "Icicle Boulder"
-Amlos.Combat.ActiveSkill.LakeOfFire.desc: "LakeOfFireDesc."
-Amlos.Combat.ActiveSkill.LakeOfFire.name: "LakeOfFire"
+Amlos.Combat.ActiveSkill.LakeOfFire.desc: "Create a lava ball falling from the air. When the lava ball hit the ground, it creates a lava lake that deals {lavaLakePrefab} every second."
+Amlos.Combat.ActiveSkill.LakeOfFire.name: "Lake of Fire"
 Amlos.Combat.ActiveSkill.LibrarysDraft.desc: "Waves of damaging projectilesd dealing {prefab} converge on chosen target point."
 Amlos.Combat.ActiveSkill.LibrarysDraft.name: "Library's Draft"
-Amlos.Combat.ActiveSkill.LightBarrier.desc: "LightBarrierDesc."
-Amlos.Combat.ActiveSkill.LightBarrier.name: "LightBarrier"
+Amlos.Combat.ActiveSkill.LightBarrier.desc: "Creates a barrier that negates damage. When the barrier is fully broken, creates a holy explosion dealing {barrierExplosion} to all nearby enemies."
+Amlos.Combat.ActiveSkill.LightBarrier.name: "Light Barrier"
 Amlos.Combat.ActiveSkill.LightGuardian.desc: "Summon a light guardian following the player for a period of time.\nIt launches projectiles dealing {projectilePrefab} at the first enemy entering its range, until this enemy dies."
 Amlos.Combat.ActiveSkill.LightGuardian.name: "Light Guardian"
-Amlos.Combat.ActiveSkill.LightSalvation.desc: "LightSalvationDesc."
-Amlos.Combat.ActiveSkill.LightSalvation.name: "LightSalvation"
+Amlos.Combat.ActiveSkill.LightSalvation.desc: "Charge skill {chargeToExecute}. Grants the player Light Salvation, a status that lasts for {durationPerLevel} seconds, plus {durationPerLevel} seconds for every additional charge. Light Salvation clears negative statuses, and prevents new negative statuses from being added."
+Amlos.Combat.ActiveSkill.LightSalvation.name: "Light Salvation"
 Amlos.Combat.ActiveSkill.LunarSlash.desc: "Replaces Claw attack with Lunar Slash for a duration, launching lunar projectiles that deals {attack}\nand shrink if touching light. "
 Amlos.Combat.ActiveSkill.LunarSlash.name: "Lunar Slash"
-Amlos.Combat.ActiveSkill.MagicChessPiece.desc: "MagicChessPieceDesc."
-Amlos.Combat.ActiveSkill.MagicChessPiece.name: "MagicChessPiece"
+Amlos.Combat.ActiveSkill.MagicChessPiece.desc: "Spawn a rook chess piece slamming the ground then accelerates in random direction, deal {prefab} to anything in its path."
+Amlos.Combat.ActiveSkill.MagicChessPiece.name: "Magic Chess Piece"
 Amlos.Combat.ActiveSkill.Meteor.desc: "Rain down meteors from the heavens.\nVery strong, but the meteors cannot be aimed."
 Amlos.Combat.ActiveSkill.Meteor.name: "Meteor"
 Amlos.Combat.ActiveSkill.MultiGust.desc: "MultiGustDesc."
-Amlos.Combat.ActiveSkill.MultiGust.name: "MultiGust"
+Amlos.Combat.ActiveSkill.MultiGust.name: "Multi Gust"
 Amlos.Combat.ActiveSkill.None.desc: "None."
 Amlos.Combat.ActiveSkill.None.name: "None"
 Amlos.Combat.ActiveSkill.PurifyHeart.desc: "Summon a large column of water to attack the enemy, dealing {purifyHeartWave}."
@@ -91,7 +91,7 @@ Amlos.Combat.ActiveSkill.PurifyHeart.name: "Purifying Heart"
 Amlos.Combat.ActiveSkill.RazorTempest.desc: "Unleash Large Razors that homes on the nearest enemy and deals {mainTempest},\nthese Razors emit small razors that deals {smallRazors} periodically"
 Amlos.Combat.ActiveSkill.RazorTempest.name: "Razor Tempest"
 Amlos.Combat.ActiveSkill.ReleaseThePlague.desc: "ReleaseThePlagueDesc."
-Amlos.Combat.ActiveSkill.ReleaseThePlague.name: "ReleaseThePlague"
+Amlos.Combat.ActiveSkill.ReleaseThePlague.name: "Release The Plague"
 Amlos.Combat.ActiveSkill.ShadowDomain.desc: "Creates a zone centered around the player that grows over {maximumChargeTime} seconds. If the player moves too quickly, or passed {activation}, the zone explodes and deals {ShadowDomainExplosion} to all enemies in the area."
 Amlos.Combat.ActiveSkill.ShadowDomain.name: "Shadow Domain"
 Amlos.Combat.ActiveSkill.ShimmeringBlessing.desc: "Grants the Shimmer Blessing effect, gives the user max {MaxShield} * ({level}+1) shield based on outgoing damage."
@@ -103,17 +103,17 @@ Amlos.Combat.ActiveSkill.SomethingForNothing.name: "Something for Nothing"
 Amlos.Combat.ActiveSkill.SoulBank.desc: "Generates a vase that drops 25 Aethium shards when broken."
 Amlos.Combat.ActiveSkill.SoulBank.name: "Soul Bank"
 Amlos.Combat.ActiveSkill.SoulCharge.desc: "SoulChargeDesc."
-Amlos.Combat.ActiveSkill.SoulCharge.name: "SoulCharge"
+Amlos.Combat.ActiveSkill.SoulCharge.name: "Soul Charge"
 Amlos.Combat.ActiveSkill.SoulTrap.desc: "Leave a soul trap at the current location lasting for a period of time.\nAny enemy attacking the trap will trigger it, dealing explosion damage within its range."
 Amlos.Combat.ActiveSkill.SoulTrap.name: "Soul Trap"
 Amlos.Combat.ActiveSkill.SpaceDistortion.desc: "Create a zone for {lifetime}s that absorbs incoming friendly projectiles, \nconverting to and dealing {bulletPrefab} to the enemies in the zone. "
 Amlos.Combat.ActiveSkill.SpaceDistortion.name: "Space Distortion"
 Amlos.Combat.ActiveSkill.SpatialCollapse.desc: "SpatialCollapseDesc."
-Amlos.Combat.ActiveSkill.SpatialCollapse.name: "SpatialCollapse"
+Amlos.Combat.ActiveSkill.SpatialCollapse.name: "Spatial Collapse"
 Amlos.Combat.ActiveSkill.SpiritLink.desc: "Drops a chain that will attach to a nearby enemy for 10s, attacking the Spirit Link deals {damageMultiplier:f_p1} original damage of soul damage to the target."
 Amlos.Combat.ActiveSkill.SpiritLink.name: "Spirit Link"
 Amlos.Combat.ActiveSkill.SpiritWarrior.desc: "SpiritWarriorDesc."
-Amlos.Combat.ActiveSkill.SpiritWarrior.name: "SpiritWarrior"
+Amlos.Combat.ActiveSkill.SpiritWarrior.name: "Spirit Warrior"
 Amlos.Combat.ActiveSkill.SuperNova.desc: "Unleash a massive supernova centering around you, dealing a burst of initial Fire damage and continous Fire damage in the area."
 Amlos.Combat.ActiveSkill.SuperNova.name: "Super Nova"
 Amlos.Combat.ActiveSkill.Superposition.desc: "Leaves behind afterimages, blocks {level} hit(s)"
@@ -125,9 +125,9 @@ Amlos.Combat.ActiveSkill.VaccumOrb.name: "Vacuum Orb"
 Amlos.Combat.ActiveSkill.Waterball.desc: "Launches a ball of water to deal {prefab}."
 Amlos.Combat.ActiveSkill.Waterball.name: "Water Ball"
 Amlos.Combat.ActiveSkill.WaterGun.desc: "WaterGunDesc."
-Amlos.Combat.ActiveSkill.WaterGun.name: "WaterGun"
+Amlos.Combat.ActiveSkill.WaterGun.name: "Water Gun"
 Amlos.Combat.ActiveSkill.WaterWall.desc: "WaterWallDesc."
-Amlos.Combat.ActiveSkill.WaterWall.name: "WaterWall"
+Amlos.Combat.ActiveSkill.WaterWall.name: "Water Wall"
 Amlos.Combat.ActiveSkill.WindBarrage.desc: "Replaces Claw attack with rapid wind barrages, dealing {prefab} damage and blocks bullets."
 Amlos.Combat.ActiveSkill.WindBarrage.name: "Wind Barrage"
 Amlos.Combat.ActiveSkill.WindBlade.desc: "Replaces Claw attack with horizontal wind blades. Large Blade does {windBladeLarge},\n 5x Small Blades does {windBladeSmall} each."
@@ -141,7 +141,7 @@ Amlos.Combat.ActiveSkill.WindStorm.name: "Wind Storm"
 Amlos.Combat.ActiveSkill.WindWall.desc: "Generate a wind wall moving horizontally, pushing back enemies and blocking projectiles."
 Amlos.Combat.ActiveSkill.WindWall.name: "Wind Wall"
 Amlos.Combat.ActiveSkill.ZeroRay.desc: "ZeroRayDesc."
-Amlos.Combat.ActiveSkill.ZeroRay.name: "ZeroRay"
+Amlos.Combat.ActiveSkill.ZeroRay.name: "Zero Ray"
 Amlos.Combat.Effect.Burning.desc: "Causes the entity to catch fire and take {EffectDamage}$Amlos.Element.Fire.name$ damage every {Interval} seconds. When level is higher than {BONUS_LEVEL}, the entity takes an additional {ExtraDamage}$Amlos.Element.Fire.name$ damage each time it is wounded."
 Amlos.Combat.Effect.Burning.name: "Burning"
 Amlos.Combat.Effect.Charge.desc: "ChargeDesc."
@@ -175,18 +175,18 @@ Amlos.Combat.Effect.Resistance.name: "Resistance"
 Amlos.Combat.Effect.Salvation.desc: "SalvationDesc."
 Amlos.Combat.Effect.Salvation.name: "Salvation"
 Amlos.Combat.Effect.ShimmeringBlessingStatus.desc: "ShimmeringBlessingStatusDesc."
-Amlos.Combat.Effect.ShimmeringBlessingStatus.name: "ShimmeringBlessingStatus"
-Amlos.Combat.Effect.Slowness.desc: "SlownessDesc."
+Amlos.Combat.Effect.ShimmeringBlessingStatus.name: "Shimmering Blessing"
+Amlos.Combat.Effect.Slowness.desc: "Reduces the entity's movement speed by {Level}\n×{DECREMENT:f_p1}, the minimum is reduced to 10% of the base speed."
 Amlos.Combat.Effect.Slowness.name: "Slowness"
 Amlos.Combat.Effect.SomeForNoneBurn.desc: "SomeForNoneBurnDesc."
 Amlos.Combat.Effect.SomeForNoneBurn.name: "Burn (Some For None)"
 Amlos.Combat.Effect.SoulTrace.desc: "SoulTraceDesc."
-Amlos.Combat.Effect.SoulTrace.name: "Soul Trace"
+Amlos.Combat.Effect.SoulTrace.name: "Soultrace"
 Amlos.Combat.Effect.Sunflare.desc: "SunflareDesc."
 Amlos.Combat.Effect.Sunflare.name: "Sunflare"
 Amlos.Combat.Effect.Sunken.desc: "SunkenDesc."
-Amlos.Combat.Effect.Sunken.name: "SwampSunken"
-Amlos.Combat.Effect.Superposition.desc: "SuperpositionDesc."
+Amlos.Combat.Effect.Sunken.name: "Sunken"
+Amlos.Combat.Effect.Superposition.desc: "Leaves behind afterimages, blocks 1+{level} hit(s)."
 Amlos.Combat.Effect.Superposition.name: "Superposition"
 Amlos.Combat.Effect.Swamp.desc: "SwampDesc."
 Amlos.Combat.Effect.Swamp.name: "Swamp"
