New Crowdin updates (#11)
* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_combat.yml (English, United States)

* New translations lang_entity.yml (Chinese Simplified)

* New translations lang_entity.yml (English, United States)

* New translations lang_combat.yml (Chinese Simplified)

* New translations lang_common.yml (Chinese Simplified)

* New translations lang_common.yml (English, United States)

* New translations lang_combat.yml (English, United States)

* New translations lang_combat.yml (English, United States)

* New translations lang_combat.yml (English, United States)

* New translations lang_common.yml (English, United States)

* New translations lang_npcnames.yml (Chinese Simplified)

* New translations lang_common.yml (Chinese Simplified)

* New translations lang_common.yml (Chinese Simplified)

* New translations lang_common.yml (Chinese Simplified)

* New translations lang_common.yml (Chinese Simplified)

* New translations lang_common.yml (English, United States)

--- a/en-US/Lang_Combat_EN-US.lang
+++ b/en-US/Lang_Combat_EN-US.lang
@@ -30,7 +30,7 @@ Amlos.Combat.ActiveSkill.DarkRadiation.desc: "Generates a dark area that moves s
 Amlos.Combat.ActiveSkill.DarkRadiation.name: "Dark Radiation"
 Amlos.Combat.ActiveSkill.DustCloud.desc: "Summons a cloud of dust. Enemies inside simultaneously receive {prefab} and the Dusted effect for {effectDuration}s, which deals additional {effectBaseDamage}% Earth Damage via basic element attacks. "
 Amlos.Combat.ActiveSkill.DustCloud.name: "Dust Cloud"
-Amlos.Combat.ActiveSkill.DustStorm.desc: "DustStormDesc."
+Amlos.Combat.ActiveSkill.DustStorm.desc: "Gives 1 §YCharge§ level unless at {chargeToExecute} §YCharge§. Creates a Dust Storm areal that deals {attack} and gains {damageLevelScaling} extra damage scaling and {speedLevelScaling} extra speed scaling per additional §YCharge§."
 Amlos.Combat.ActiveSkill.DustStorm.name: "Dust Storm"
 Amlos.Combat.ActiveSkill.Earthball.desc: "Summon an orbiting Earthen sphere that does {prefab} damage when contacting enemies."
 Amlos.Combat.ActiveSkill.Earthball.name: "Earth Ball"
@@ -38,7 +38,7 @@ Amlos.Combat.ActiveSkill.EarthenClaymore.desc: "Replaces Claw attack with swings
 Amlos.Combat.ActiveSkill.EarthenClaymore.name: "Earthen Claymore"
 Amlos.Combat.ActiveSkill.EarthSpike.desc: "Summon a wave of advancing spikes, dealing {prefab} damage and knocking up enemies \nand can additionally deal damage to enemies landing on the spikes. "
 Amlos.Combat.ActiveSkill.EarthSpike.name: "Earth Spike"
-Amlos.Combat.ActiveSkill.EraserBall.desc: "EraserBallDesc."
+Amlos.Combat.ActiveSkill.EraserBall.desc: "Gives 5 §YCharge§ level unless at {chargeToExecute} §YCharge§. Shoots an eraser ball projectile, dealing {eraserBall} with a speed of {baseSpeed}. Every additional §YCharge§ increases the effect of gravity by {gravityScaleScaling} and decreasing speed to {scalingSpeedBetweenOneAndZero} of original and decreasing damage to {scalingDamageBetweenOneAndZero} of original."
 Amlos.Combat.ActiveSkill.EraserBall.name: "Eraser Ball"
 Amlos.Combat.ActiveSkill.Eruption.desc: "Summon 5 fire ball, deal {projectile}, creating a explosion of radius {explosion.Radius}m deal {explosion} to enemies"
 Amlos.Combat.ActiveSkill.Eruption.name: "Eruption"
@@ -50,12 +50,14 @@ Amlos.Combat.ActiveSkill.FirePillars.desc: "Summon fire pillars, Deal {pillar} e
 Amlos.Combat.ActiveSkill.FirePillars.name: "Fire Pillars"
 Amlos.Combat.ActiveSkill.FlameMine.desc: "Creates a mine at current location, exploding for {explosionPrefab} on contact or after {autoExplodeTime}s in a radius 10. "
 Amlos.Combat.ActiveSkill.FlameMine.name: "Flame Mine"
-Amlos.Combat.ActiveSkill.FlareDetonator.desc: "FlareDetonatorDesc."
+Amlos.Combat.ActiveSkill.FlareDetonator.desc: "Gives 1 §YCharge§ level unless at {chargeToExecute} §YCharge§. Creates an areal around the player, continuously dealing {attack} and gaining a {damageLevelScaling} damage and {durationLevelScaling} duration multiplier bonus for every additional §YCharge§."
 Amlos.Combat.ActiveSkill.FlareDetonator.name: "Flare Detonator"
 Amlos.Combat.ActiveSkill.FlowerPower.desc: "Fires a volley of flowers in a set direction, dealing {prefab} damage per flower."
 Amlos.Combat.ActiveSkill.FlowerPower.name: "Flower Power"
 Amlos.Combat.ActiveSkill.FlowofWater.desc: "Replaces Claw attack with a 3 hit-combo water attack."
 Amlos.Combat.ActiveSkill.FlowofWater.name: "Flow of Water"
+Amlos.Combat.ActiveSkill.GravBomb.desc: "GravBombDesc."
+Amlos.Combat.ActiveSkill.GravBomb.name: "Gravity Bomb"
 Amlos.Combat.ActiveSkill.GustMissile.desc: "Creates wind projectiles from the player towards the mouse.\nThe missiles start slow but become fast. The faster they are, the more damage they do. \nMinimum {prefab}"
 Amlos.Combat.ActiveSkill.GustMissile.name: "Gust Missile"
 Amlos.Combat.ActiveSkill.HeatWave.desc: "Create an outward expanding ring of heat from Radius 5 to Radius 10 over 10s, dealing {prefab} in the area."
@@ -82,7 +84,7 @@ Amlos.Combat.ActiveSkill.MagicChessPiece.desc: "Spawn a rook chess piece slammin
 Amlos.Combat.ActiveSkill.MagicChessPiece.name: "Magic Chess Piece"
 Amlos.Combat.ActiveSkill.Meteor.desc: "Rain down meteors from the heavens.\nVery strong, but the meteors cannot be aimed."
 Amlos.Combat.ActiveSkill.Meteor.name: "Meteor"
-Amlos.Combat.ActiveSkill.MultiGust.desc: "MultiGustDesc."
+Amlos.Combat.ActiveSkill.MultiGust.desc: "Gives 1 §YCharge§ level unless at {chargeToExecute} §YCharge§. For every §YCharge§ level, shoots 4 homing gust projectiles every {shootDelay} seconds that deals {attack} and alternates between shooting out of the player's cardinals and intercardinals."
 Amlos.Combat.ActiveSkill.MultiGust.name: "Multi Gust"
 Amlos.Combat.ActiveSkill.None.desc: "None."
 Amlos.Combat.ActiveSkill.None.name: "None"
@@ -102,17 +104,17 @@ Amlos.Combat.ActiveSkill.SomethingForNothing.desc: "Sacrifices 5% of current hea
 Amlos.Combat.ActiveSkill.SomethingForNothing.name: "Something for Nothing"
 Amlos.Combat.ActiveSkill.SoulBank.desc: "Generates a vase that drops 25 Aethium shards when broken."
 Amlos.Combat.ActiveSkill.SoulBank.name: "Soul Bank"
-Amlos.Combat.ActiveSkill.SoulCharge.desc: "SoulChargeDesc."
+Amlos.Combat.ActiveSkill.SoulCharge.desc: "Effect changes at {chargeToExecute} §YCharge§. Creates a §#777777SoulCharge§ minion that is destroyed when attacked by enemies. After some time, the minion will give 3 §YCharge§ if §YCharge§ level is below {chargeToExecute}, or create an areal continuously dealing {explosion} at or above {chargeToExecute} §YCharge§, with a reducing {scalingDamageBetweenOneAndZero} damage multiplier for every additional §YCharge§."
 Amlos.Combat.ActiveSkill.SoulCharge.name: "Soul Charge"
 Amlos.Combat.ActiveSkill.SoulTrap.desc: "Leave a soul trap at the current location lasting for a period of time.\nAny enemy attacking the trap will trigger it, dealing explosion damage within its range."
 Amlos.Combat.ActiveSkill.SoulTrap.name: "Soul Trap"
 Amlos.Combat.ActiveSkill.SpaceDistortion.desc: "Create a zone for {lifetime}s that absorbs incoming friendly projectiles, \nconverting to and dealing {bulletPrefab} to the enemies in the zone. "
 Amlos.Combat.ActiveSkill.SpaceDistortion.name: "Space Distortion"
-Amlos.Combat.ActiveSkill.SpatialCollapse.desc: "SpatialCollapseDesc."
+Amlos.Combat.ActiveSkill.SpatialCollapse.desc: "Creates {areaAmount} spatial rifts around the player. When an enemy comes close to the spatial rift, it explodes and deals {explosionPrefab} to all nearby enemies."
 Amlos.Combat.ActiveSkill.SpatialCollapse.name: "Spatial Collapse"
 Amlos.Combat.ActiveSkill.SpiritLink.desc: "Drops a chain that will attach to a nearby enemy for 10s, attacking the Spirit Link deals {damageMultiplier:f_p1} original damage of soul damage to the target."
 Amlos.Combat.ActiveSkill.SpiritLink.name: "Spirit Link"
-Amlos.Combat.ActiveSkill.SpiritWarrior.desc: "SpiritWarriorDesc."
+Amlos.Combat.ActiveSkill.SpiritWarrior.desc: "Creates a §#777777SpiritWarrior§ minion that launches forward after some time. The minion will pierce enemies and deal {warriorPrefab} to every enemy. The minion will die when damaged by a projectile."
 Amlos.Combat.ActiveSkill.SpiritWarrior.name: "Spirit Warrior"
 Amlos.Combat.ActiveSkill.SuperNova.desc: "Unleash a massive supernova centering around you, dealing a burst of initial Fire damage and continous Fire damage in the area."
 Amlos.Combat.ActiveSkill.SuperNova.name: "Super Nova"
@@ -124,9 +126,9 @@ Amlos.Combat.ActiveSkill.VaccumOrb.desc: "Shoots vacuum orbs to the front in a s
 Amlos.Combat.ActiveSkill.VaccumOrb.name: "Vacuum Orb"
 Amlos.Combat.ActiveSkill.Waterball.desc: "Launches a ball of water to deal {prefab}."
 Amlos.Combat.ActiveSkill.Waterball.name: "Water Ball"
-Amlos.Combat.ActiveSkill.WaterGun.desc: "WaterGunDesc."
+Amlos.Combat.ActiveSkill.WaterGun.desc: "Gives 1 §YCharge§ level unless at {chargeToExecute} §YCharge§. Fires an instant beam of water that deals {attack}."
 Amlos.Combat.ActiveSkill.WaterGun.name: "Water Gun"
-Amlos.Combat.ActiveSkill.WaterWall.desc: "WaterWallDesc."
+Amlos.Combat.ActiveSkill.WaterWall.desc: "Launches {arealAmount} Water Wall projectiles that move horizontally and deal {prefab} damage. Destroys fire projectiles, kills fire enemies, burns dark enemies, and slows wind enemies."
 Amlos.Combat.ActiveSkill.WaterWall.name: "Water Wall"
 Amlos.Combat.ActiveSkill.WindBarrage.desc: "Replaces Claw attack with rapid wind barrages, dealing {prefab} damage and blocks bullets."
 Amlos.Combat.ActiveSkill.WindBarrage.name: "Wind Barrage"
@@ -140,23 +142,23 @@ Amlos.Combat.ActiveSkill.WindStorm.desc: "Continuously fire wind slicers horizon
 Amlos.Combat.ActiveSkill.WindStorm.name: "Wind Storm"
 Amlos.Combat.ActiveSkill.WindWall.desc: "Generate a wind wall moving horizontally, pushing back enemies and blocking projectiles."
 Amlos.Combat.ActiveSkill.WindWall.name: "Wind Wall"
-Amlos.Combat.ActiveSkill.ZeroRay.desc: "ZeroRayDesc."
+Amlos.Combat.ActiveSkill.ZeroRay.desc: "Gives 1 §YCharge§ level unless at {chargeToExecute} §YCharge§. Shoots a stream of projectiles, dealing {attack} for each projectile and shooting 8 additional projectiles for every additional §YCharge§."
 Amlos.Combat.ActiveSkill.ZeroRay.name: "Zero Ray"
 Amlos.Combat.Effect.Burning.desc: "Causes the entity to catch fire and take {EffectDamage}$Amlos.Element.Fire.name$ damage every {Interval} seconds. When level is higher than {BONUS_LEVEL}, the entity takes an additional {ExtraDamage}$Amlos.Element.Fire.name$ damage each time it is wounded."
 Amlos.Combat.Effect.Burning.name: "Burning"
-Amlos.Combat.Effect.Charge.desc: "ChargeDesc."
+Amlos.Combat.Effect.Charge.desc: "Your §YCharge§ level. Some skills give §YCharge§ and require a level of §YCharge§ to attack."
 Amlos.Combat.Effect.Charge.name: "Charge"
-Amlos.Combat.Effect.CountShield.desc: "CountShieldDesc."
+Amlos.Combat.Effect.CountShield.desc: "Reduces any incoming damage to zero and reduces this level 1. Removed at level 0."
 Amlos.Combat.Effect.CountShield.name: "Count Shield"
-Amlos.Combat.Effect.Crack.desc: "CrackDesc."
+Amlos.Combat.Effect.Crack.desc: "Increases incoming physical damage by {INCREMENT}."
 Amlos.Combat.Effect.Crack.name: "Crack"
-Amlos.Combat.Effect.DarkIrradiated.desc: "DarkIrradiatedDesc."
+Amlos.Combat.Effect.DarkIrradiated.desc: "Periodically take dark damage. The longer the effect lasts, the higher the damage will be."
 Amlos.Combat.Effect.DarkIrradiated.name: "Dark Irradiated"
-Amlos.Combat.Effect.Diffusion.desc: "DiffusionDesc."
+Amlos.Combat.Effect.Diffusion.desc: "Spreads the burning effect on self to nearby allied entities, with reduced level and duration."
 Amlos.Combat.Effect.Diffusion.name: "Diffusion"
-Amlos.Combat.Effect.Dusted.desc: "DustedDesc."
+Amlos.Combat.Effect.Dusted.desc: "Take additional earth damage whenever host takes earth, water, wind, or fire damage."
 Amlos.Combat.Effect.Dusted.name: "Dusted"
-Amlos.Combat.Effect.Eclipse.desc: "EclipseDesc."
+Amlos.Combat.Effect.Eclipse.desc: "Increases damage taken, if host is a light element creature then damage is further increased."
 Amlos.Combat.Effect.Eclipse.name: "Eclipse"
 Amlos.Combat.Effect.Evaporate.desc: "EvaporateDesc."
 Amlos.Combat.Effect.Evaporate.name: "Evaporate"
@@ -208,7 +210,15 @@ Amlos.Combat.PassiveSkill.GaleCombo.desc: "When enemies take damage from wind at
 Amlos.Combat.PassiveSkill.GaleCombo.name: "Gale Combo"
 Amlos.Combat.PassiveSkill.GazeFromAbyss.desc: "When active skills deal damage, add 1 Sunken level to target."
 Amlos.Combat.PassiveSkill.GazeFromAbyss.name: "Gaze From Abyss"
+Amlos.Combat.PassiveSkill.KarisArmor.desc: "KarisArmorDesc."
+Amlos.Combat.PassiveSkill.KarisArmor.name: "KarisArmor"
 Amlos.Combat.PassiveSkill.None.desc: ""
 Amlos.Combat.PassiveSkill.None.name: "None"
+Amlos.Combat.PassiveSkill.SolarBless.desc: "SolarBlessDesc."
+Amlos.Combat.PassiveSkill.SolarBless.name: "SolarBless"
+Amlos.Combat.PassiveSkill.Starcrack.desc: "StarcrackDesc."
+Amlos.Combat.PassiveSkill.Starcrack.name: "Starcrack"
 Amlos.Combat.PassiveSkill.TranquilLake.desc: "You get a lake barrier which can take 1 attack, then it breaks and enters 30s CD.\nThe lake barrier makes you immune to negative effects, increases your damage by 50%.\nWith the lake barrier, you recover 1% max health per second in battle.\nUpon breaking, the lake barrier deals 1 water damage and 5s Freeze to circle r=3m."
 Amlos.Combat.PassiveSkill.TranquilLake.name: "Tranquil Lake"
+Amlos.Combat.PassiveSkill.Windblower.desc: "WindblowerDesc."
+Amlos.Combat.PassiveSkill.Windblower.name: "Windblower"
