--- a/zh-CN/Lang_Combat_ZH-CN.lang
+++ b/zh-CN/Lang_Combat_ZH-CN.lang
@@ -56,6 +56,8 @@ Amlos.Combat.ActiveSkill.FlowerPower.desc: "向指定方向发射一连串花朵
 Amlos.Combat.ActiveSkill.FlowerPower.name: "花之语"
 Amlos.Combat.ActiveSkill.FlowofWater.desc: "替换爪击为3段水属性连击。"
 Amlos.Combat.ActiveSkill.FlowofWater.name: "水之道"
+Amlos.Combat.ActiveSkill.GravBomb.desc: "GravBombDesc."
+Amlos.Combat.ActiveSkill.GravBomb.name: "GravBomb"
 Amlos.Combat.ActiveSkill.GustMissile.desc: "从玩家向鼠标方向发射风弹，风弹开始时速度很慢，但会逐渐增加，速度越快造成的伤害就越大，风弹最少造 {prefab}。"
 Amlos.Combat.ActiveSkill.GustMissile.name: "蓄势疾风"
 Amlos.Combat.ActiveSkill.HeatWave.desc: "释放持续扩散的热浪，10秒内每秒对范围内所有目标造成 {prefab} 。\n初始范围为半径5米，最大扩散至半径10米。"
@@ -152,7 +154,7 @@ Amlos.Combat.Effect.Crack.desc: "使得实体受到的物理伤害提升{Level}*
 Amlos.Combat.Effect.Crack.name: "龟裂"
 Amlos.Combat.Effect.DarkIrradiated.desc: "使实体每{Interval:f_f2}秒受到{baseDamage}$Amlos.Element.Dark.name$伤害。\n实体受到的伤害会随着时间增加，每次结算伤害增加{Level}×{BASE_DAMAGE}的伤害。"
 Amlos.Combat.Effect.DarkIrradiated.name: "暗辐"
-Amlos.Combat.Effect.Diffusion.desc: "当实体拥有超过1级的$Amlos.Combat.Effect.Burning.name$效果后，半径{Radius}格的实体将被赋予{AddingLevel}级的$Amlos.Combat.Effect.Burning.name$，持续50%当前$Amlos.Combat.Effect.Burning.name$效果的时间。"
+Amlos.Combat.Effect.Diffusion.desc: "当实体拥有超过1级的$Amlos.Combat.Effect.Burning.name$效果后，半径{Radius} 格的实体将被赋予（原等级-1）级的$Amlos.Combat.Effect.Burning.name$，持续50%当前$Amlos.Combat.Effect.Burning.name$效果的时间。"
 Amlos.Combat.Effect.Diffusion.name: "扩散"
 Amlos.Combat.Effect.Dusted.desc: "当实体受到非基础元素（$Amlos.Element.Fire.name$, $Amlos.Element.Water.name$, $Amlos.Element.Earth.name$, $Amlos.Element.Wind.name$）伤害时，\n对实体追加原伤害{Level}×{DUST_DAMAGE:f_p0}的$Amlos.Combat.Damage.PhysicalDamage.info:physicalDamage=$$Amlos.Element.Earth.name$伤害"
 Amlos.Combat.Effect.Dusted.name: "尘缚"
@@ -208,7 +210,15 @@ Amlos.Combat.PassiveSkill.GaleCombo.desc: "GaleComboDesc."
 Amlos.Combat.PassiveSkill.GaleCombo.name: "GaleCombo"
 Amlos.Combat.PassiveSkill.GazeFromAbyss.desc: "GazeFromAbyssDesc."
 Amlos.Combat.PassiveSkill.GazeFromAbyss.name: "GazeFromAbyss"
+Amlos.Combat.PassiveSkill.KarisArmor.desc: "KarisArmorDesc."
+Amlos.Combat.PassiveSkill.KarisArmor.name: "KarisArmor"
 Amlos.Combat.PassiveSkill.None.desc: "无"
 Amlos.Combat.PassiveSkill.None.name: "无"
+Amlos.Combat.PassiveSkill.SolarBless.desc: "SolarBlessDesc."
+Amlos.Combat.PassiveSkill.SolarBless.name: "SolarBless"
+Amlos.Combat.PassiveSkill.Starcrack.desc: "StarcrackDesc."
+Amlos.Combat.PassiveSkill.Starcrack.name: "Starcrack"
 Amlos.Combat.PassiveSkill.TranquilLake.desc: "TranquilLakeDesc."
 Amlos.Combat.PassiveSkill.TranquilLake.name: "TranquilLake"
+Amlos.Combat.PassiveSkill.Windblower.desc: "WindblowerDesc."
+Amlos.Combat.PassiveSkill.Windblower.name: "Windblower"
