--- a/en-US/Lang_UI_EN-US.lang
+++ b/en-US/Lang_UI_EN-US.lang
@@ -10,7 +10,7 @@ Amlos.UI.PausePanel.title: "Pause"
 Amlos.UI.Setting.Control.title: "Control"
 Amlos.UI.Setting.Graphics.title: "Graphic"
 Amlos.UI.Setting.Language.title: "Language"
-Amlos.UI.Setting.Name: "Setting"
+Amlos.UI.Setting.title: "Settings"
 Amlos.UI.Setting.Other.title: "Other"
 Amlos.UI.Setting.Sound.title: "Sound"
 Amlos.UI.Setting.Sound.Global.name: "Global"
