--- a/zh-CN/Lang_UI_ZH-CN.lang
+++ b/zh-CN/Lang_UI_ZH-CN.lang
@@ -10,7 +10,7 @@ Amlos.UI.PausePanel.title: "暂停"
 Amlos.UI.Setting.Control.title: "控制"
 Amlos.UI.Setting.Graphics.title: "图像"
 Amlos.UI.Setting.Language.title: "语言"
-Amlos.UI.Setting.Name: "设置"
+Amlos.UI.Setting.title: "设置"
 Amlos.UI.Setting.Other.title: "其他"
 Amlos.UI.Setting.Sound.title: "声音"
 Amlos.UI.Setting.Sound.Global.name: "全局"
